<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearError"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/error" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/linearRestartPc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="40dp"
                    android:gravity="center"
                    android:onClick="restartPc"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/shutdown" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_menu_restart" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearListApp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="listApp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/terminate" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_menu_kill" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center">



                    <LinearLayout
                        android:id="@+id/linearMessage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="40dp"
                        android:gravity="center"
                        android:onClick="message"
                        android:orientation="vertical"
                        android:tag="add">

                        <ImageView
                            android:id="@+id/imageViewMessage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/message_add" />

                        <TextView
                            android:id="@+id/textViewMessage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_menu_message" />
                    </LinearLayout>


                <LinearLayout
                    android:id="@+id/linearShutdownPc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="shutdownPc"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/restart" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_menu_shutdown" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center">




                <LinearLayout
                    android:id="@+id/linearAudio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="40dp"
                    android:gravity="center"
                    android:onClick="muteAudio"
                    android:orientation="vertical"
                    android:tag="mute">

                    <ImageView
                        android:id="@+id/imageViewAudio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/mute" />

                    <TextView
                        android:id="@+id/textViewMute"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_menu_mute" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/linearAbout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="aboutApp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/processlist" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_menu_about" />
                </LinearLayout>
            </TableRow>

        </TableLayout>

        <SeekBar
            android:id="@+id/seekBarVolume"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:maxHeight="6dip"
            android:minHeight="6dip"
            android:rotation="0"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/label_text_status" />

        <EditText
            android:id="@+id/editTextRemoteIP"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/label_remote_ip_address"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startConnecting"
            android:text="@string/label_button_connect" />

    </LinearLayout>

</LinearLayout>